--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>JacintoMania | Index</title>
+    <title>JacintoMania | Inicio</title>
 </head>
 <body>
     <!-- header navbar -->
@@ -71,6 +71,26 @@
         </nav>
     </header>
     <!-- header navbar end -->
+
+    <!-- main -->
+    <main>
+
+    </main>
+    <!-- main end -->
+
+    <!-- footer -->
+    <footer id="footerIndex">
+        <div class="grilla">
+            <br>
+            <div class="dos">
+                <a class="ig" href="https://www.instagram.com/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a class="tw" href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a class="fb" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/04a529da51.js" crossorigin="anonymous"></script>
 </body>
 </html>
