--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>JacintoMania | Inicio</title>
 </head>
-<body>
+<body class="bodyindex">
     <!-- header navbar -->
     <header class="header">
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
@@ -69,17 +70,42 @@
               </div>
             </div>
         </nav>
+        
     </header>
     <!-- header navbar end -->
 
     <!-- main -->
-    <main>
-
+    <main class="mainindex">
+        <h1>JacintoMania</h1>
+        <h2>Fansite de Resident Evil</h2>
+        <div class="card-group">
+            <div class="card">
+              <img src="https://c4.wallpaperflare.com/wallpaper/780/420/942/resident-evil-8-village-resident-evil-video-games-chris-redfield-artwork-hd-wallpaper-preview.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+            </div>
+        </div>
     </main>
     <!-- main end -->
-
+    
     <!-- footer -->
-    <footer id="footerIndex">
+    <footer>
         <div class="grilla">
             <br>
             <div class="dos">
