--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fansite de la saga de Resident Evil">
+    <meta name="keywords"  content="VIDEOJUEGO, JUEGO, ZOMBIES, CONSOLAS, PC, TERROR, SURVIVAL, FANSITE">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +30,7 @@
                   </li>
                   <!-- CONTACTO -->
                   <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
                   </li>
                   <!-- ABOUT -->
                   <li class="nav-item">
