--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,7 +77,25 @@
     <!-- header navbar end -->
 
     <!-- main -->
+    <main class="maincontacto">
         <h1>Contactame</h1>
+        <form class="formularioContacto text-center">
+            <div class="mb-3">
+              <label for="nombre" class="form-label"></label>
+              <input type="name" class="form-control-lg" id="nombre" aria-describedby="emailHelp" placeholder="Nombre...">
+            </div>
+            <div class="mb-3">
+              <label for="correo" class="form-label"></label>
+              <input type="email" class="form-control-lg" id="correo" placeholder="E-mail...">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label"></label>
+                <textarea class="form-control-lg" id="exampleFormControlTextarea1" placeholder="Escribe un comentario..." rows="5" cols="23"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary text-center">Submit</button>
+        </form>
+    </main>
+    </main>
     <!-- main end -->
     
     <!-- footer -->
