inicializacion del about.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </li>
                   <!-- ABOUT -->
                   <li class="nav-item">
-                    <a class="nav-link" href="acerca_de.html">Acerca de</a>
+                    <a class="nav-link" href="/pages/about.html">Acerca de</a>
                   </li>
                   <!-- INFORMACION(DROP) -->
                   <li class="nav-item dropdown">
