todas los html de las secciones de informacion codeadas
tambien se añadieron mixins y extends para reducir un poco de codigo

--- a/pages/titulo2.html
+++ b/pages/titulo2.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>JacintoMania | Contacto</title>
+    <title>JacintoMania | Resident Evil 2</title>
 </head>
-<body class="bodycontacto">
+<body class="bodyinfo">
     <!-- header navbar -->
     <header class="header">
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
@@ -30,7 +30,7 @@
                   </li>
                   <!-- CONTACTO -->
                   <li class="nav-item">
-                    <a class="nav-link active" href="/pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
                   </li>
                   <!-- ABOUT -->
                   <li class="nav-item">
@@ -38,21 +38,21 @@
                   </li>
                   <!-- INFORMACION(DROP) -->
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Información
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="/pages/titulo0.html">Resident Evil 0</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo1.html">Resident Evil 1</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo2.html">Resident Evil 2</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo3.html">Resident Evil 3</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulocv.html">Resident Evil: Code Veronica</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo4.html">Resident Evil 4</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo5.html">Resident Evil 5</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo6.html">Resident Evil 6</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo7.html">Resident Evil 7</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo8.html">Resident Evil 8</a></li>
-                    </ul>
+                        <li><a class="dropdown-item" href="/pages/titulo0.html">Resident Evil 0</a></li>
+                        <li><a class="dropdown-item" href="/pages/titulo1.html">Resident Evil 1</a></li>
+                        <li><a class="dropdown-item active" href="/pages/titulo2.html">Resident Evil 2</a></li>
+                        <li><a class="dropdown-item" href="/pages/titulo3.html">Resident Evil 3</a></li>
+                        <li><a class="dropdown-item" href="/pages/titulocv.html">Resident Evil: Code Veronica</a></li>
+                        <li><a class="dropdown-item" href="/pages/titulo4.html">Resident Evil 4</a></li>
+                        <li><a class="dropdown-item" href="/pages/titulo5.html">Resident Evil 5</a></li>
+                        <li><a class="dropdown-item" href="/pages/titulo6.html">Resident Evil 6</a></li>
+                        <li><a class="dropdown-item" href="/pages/titulo7.html">Resident Evil 7</a></li>
+                        <li><a class="dropdown-item" href="/pages/titulo8.html">Resident Evil 8</a></li>
+                      </ul>
                   </li>
                   <!-- RECOMENDACIONES(DROP) -->
                   <li class="nav-item dropdown">
@@ -79,25 +79,19 @@
     <!-- header navbar end -->
 
     <!-- main -->
-    <main class="maincontacto">
-        <h1>Contactame</h1>
-        <form class="formularioContacto text-center">
-            <div class="mb-3">
-              <label for="nombre" class="form-label"></label>
-              <input type="name" class="form-control-lg" id="nombre" aria-describedby="emailHelp" placeholder="Nombre...">
-            </div>
-            <div class="mb-3">
-              <label for="correo" class="form-label"></label>
-              <input type="email" class="form-control-lg" id="correo" placeholder="E-mail...">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label"></label>
-                <textarea class="form-control-lg" id="exampleFormControlTextarea1" placeholder="Escribe un comentario..." rows="5" cols="23"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary text-center">Submit</button>
-        </form>
-    </main>
-    </main>
+    <div class="container">
+      <div class="Logo2"></div>
+      <div class="Premisa">
+        Seguido de los acontecimientos del primer título, los jugadores ahora toman el rol de Leon Kennedy y Claire Redfield que se ven empujados por un brote desastroso en Raccoon City que transformó a su población en zombis mortales. Tanto Leon como Claire tienen sus propias campañas jugables separadas, lo que permite a los jugadores ver la historia desde la perspectiva de ambos personajes.
+      </div>
+      <div class="Plataformas">
+        Plataformas:
+        <br><br>
+        Original: PlayStation - Windows - Sega Dreamcast - Nintendo 64 - Nintendo Gamecube
+        <br><br>
+        Remake: PlayStation 4 - Xbox One - Windows
+      </div>
+    </div>
     <!-- main end -->
     
     <!-- footer -->
