--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="/pages/titulo0.html">Resident Evil 0</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 1</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 2</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 3</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil: Code Veronica</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 4</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 5</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 6</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 7</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 8</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo1.html">Resident Evil 1</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo2.html">Resident Evil 2</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo3.html">Resident Evil 3</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulocv.html">Resident Evil: Code Veronica</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo4.html">Resident Evil 4</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo5.html">Resident Evil 5</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo6.html">Resident Evil 6</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo7.html">Resident Evil 7</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo8.html">Resident Evil 8</a></li>
                     </ul>
                   </li>
                   <!-- RECOMENDACIONES(DROP) -->
