--- a/pages/titulo0.html
+++ b/pages/titulo0.html
@@ -43,15 +43,15 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item active" href="/pages/titulo0.html">Resident Evil 0</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 1</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 2</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 3</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil: Code Veronica</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 4</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 5</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 6</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 7</a></li>
-                      <li><a class="dropdown-item" href="">Resident Evil 8</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo1.html">Resident Evil 1</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo2.html">Resident Evil 2</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo3.html">Resident Evil 3</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulocv.html">Resident Evil: Code Veronica</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo4.html">Resident Evil 4</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo5.html">Resident Evil 5</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo6.html">Resident Evil 6</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo7.html">Resident Evil 7</a></li>
+                      <li><a class="dropdown-item" href="/pages/titulo8.html">Resident Evil 8</a></li>
                     </ul>
                   </li>
                   <!-- RECOMENDACIONES(DROP) -->
@@ -80,10 +80,15 @@
 
     <!-- main -->
     <div class="container">
-        <div id="0" class="Portada"></div>
-        <div class="Premisa"></div>
-        <div class="Puntaje"></div>
-        <div class="año_y_plataformas"></div>
+      <div class="Logo0"></div>
+      <div class="Premisa">
+        La historia de Resident Evil 0 lleva a los jugadores a 1998. Se han acumulado informes sobre asesinatos inusuales en las afueras de Raccoon City. La división de Fuerzas Especiales de la ciudad, S.T.A.R.S., envía a su equipo Bravo, incluida la policía novata Rebecca Chambers, para investigar. En el camino, el helicóptero del equipo sufre problemas con el motor y se ve obligado a realizar un aterrizaje forzoso, donde encuentran un vehículo de transporte de prisioneros volcado. Dividiéndose para buscar en el área, Rebecca descubre el Ecliptic Express, un tren detenido en seco en las vías. En el interior, conoce al convicto del corredor de la muerte y ex teniente de la Marina Billy Coen. A lo largo del juego, tomarás el control de Rebecca y Billy, y en ocasiones cambiarás entre ambos personajes para continuar. Aprender las ventajas de cada personaje es la clave para resolver acertijos y sobrevivir a las pesadillas que se avecinan.
+      </div>
+      <div class="Plataformas">
+        Plataformas:
+        <br><br>
+        GameCube - Wii - PlayStation 3 - PlayStation 4 - Xbox 360 - Xbox One - Microsoft Windows - Nintendo Switch.
+      </div>
     </div>
     <!-- main end -->
     
