reinicio de la seccion "información"
se borraron todos los html ya que no me gustaba como se veian, se empezarán de 0.

--- a/index.html
+++ b/index.html
@@ -36,23 +36,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/pages/about.html">Acerca de</a>
                   </li>
-                  <!-- INFORMACION(DROP) -->
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Información
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="/pages/titulo0.html">Resident Evil 0</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo1.html">Resident Evil 1</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo2.html">Resident Evil 2</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo3.html">Resident Evil 3</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulocv.html">Resident Evil: Code Veronica</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo4.html">Resident Evil 4</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo5.html">Resident Evil 5</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo6.html">Resident Evil 6</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo7.html">Resident Evil 7</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo8.html">Resident Evil 8</a></li>
-                    </ul>
+                  <!-- INFORMACION -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Información</a>
                   </li>
                   <!-- RECOMENDACIONES(DROP) -->
                   <li class="nav-item dropdown">
