--- a/pages/about.html
+++ b/pages/about.html
@@ -36,23 +36,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" href="/pages/about.html">Acerca de</a>
                   </li>
-                  <!-- INFORMACION(DROP) -->
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Información
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="/pages/titulo0.html">Resident Evil 0</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo1.html">Resident Evil 1</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo2.html">Resident Evil 2</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo3.html">Resident Evil 3</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulocv.html">Resident Evil: Code Veronica</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo4.html">Resident Evil 4</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo5.html">Resident Evil 5</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo6.html">Resident Evil 6</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo7.html">Resident Evil 7</a></li>
-                      <li><a class="dropdown-item" href="/pages/titulo8.html">Resident Evil 8</a></li>
-                    </ul>
+                  <!-- INFORMACION -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Información</a>
                   </li>
                   <!-- RECOMENDACIONES(DROP) -->
                   <li class="nav-item dropdown">
@@ -86,19 +72,11 @@
               <p class="card-text">
                 <p class="text-center">Fansite de la saga Resident Evil, donde encontraras:</p> 
                 <li>
-                    La información de los juegos más importantes de la franquicia (plataformas donde se puede jugar, año de salida y un breve resumen de la premisa).
+                    La información de los juegos más importantes de la franquicia (plataformas donde se puede jugar y un breve resumen de la premisa).
                     Haga click en alguno de los siguientes juegos para saber más sobre el mismo:
                     <ul class="titulos">
-                        <a href="/pages/titulo0.html"><li>RESIDENT EVIL 0</li></a>
-                        <a href="/pages/titulo1.html"><li>RESIDENT EVIL 1</li></a>
-                        <a href="/pages/titulo2.html"><li>RESIDENT EVIL 2</li></a>
-                        <a href="/pages/titulo3.html"><li>RESIDENT EVIL 3</li></a>
-                        <a href="/pages/titulo4.html"><li>RESIDENT EVIL: CODE VERONICA</li></a>
-                        <a href="/pages/titulo5.html"><li>RESIDENT EVIL 4</li></a>
-                        <a href="/pages/titulo6.html"><li>RESIDENT EVIL 5</li></a>
-                        <a href="/pages/titulo7.html"><li>RESIDENT EVIL 6</li></a>
-                        <a href="/pages/titulo8.html"><li>RESIDENT EVIL 7</li></a>
-                        <a href="/pages/titulocv.html"><li>RESIDENT EVIL 8</li></a>
+                      <br>
+                      <a href="informacion.html">INFORMACIÓN</a>
                     </ul>
                 </li>
                 <li>Recomendaciones sobre qué orden de jugada optar (por cuál juego empezar por ejemplo) además de la plataforma donde te conviene jugarlo.
