info.html creado
se linkeo en los otros htmls

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   </li>
                   <!-- INFORMACION -->
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Información</a>
+                    <a class="nav-link" href="/pages/info.html">Información</a>
                   </li>
                   <!-- RECOMENDACIONES(DROP) -->
                   <li class="nav-item dropdown">
