--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,7 +38,7 @@
                   </li>
                   <!-- INFORMACION -->
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Información</a>
+                    <a class="nav-link" href="/pages/info.html">Información</a>
                   </li>
                   <!-- RECOMENDACIONES(DROP) -->
                   <li class="nav-item dropdown">
@@ -82,7 +82,6 @@
             </div>
             <button type="submit" class="btn btn-primary text-center">Submit</button>
         </form>
-    </main>
     </main>
     <!-- main end -->
     
