info.html finalizado
se uso un template que encontré en internet y lo personalice para mi sitio.

--- a/pages/info.html
+++ b/pages/info.html
@@ -65,7 +65,115 @@
     <!-- header navbar end -->
 
     <!-- main -->
-
+    <h1 class="h1Info">Información de la saga</h1>
+    <ul class="tilesWrap">
+        <li class="re0">
+            <h2>0</h2>
+            <h3>Resident Evil 0</h3>
+            <br>
+            <p>
+                Este titulo salió en el 2002 para la GameCube, 6 años después que Resident Evil 1, funcionando como precuela de este último.
+                El juego transcurre 24 horas antes del primer juego.
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil_0" target="_blank"><button>Más información.</button></a>
+            
+        </li>
+        <li class="re1">
+            <h2>1</h2>
+            <h3>Resident Evil 1</h3>
+            <br>
+            <p>
+                Primer juego de la saga, fue tan exitoso que popularizó el género del survival horror.
+                El juego salió en 1996 y tuvo un remake en el 2002 para la GameCube.
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil" target="_blank"><button>Más información.</button></a>
+        </li>
+        <li class="re2">
+            <h2>2</h2>
+            <h3>Resident Evil 2</h3>
+            <br>
+            <p>
+                Secuela directa del primer título, transcurre dos meses después.
+                El juego salió en 1998 y tuvo un remake en el 2019 para varias plataformas.
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil_2" target="_blank"><button>Más información.</button></a>
+        </li>
+        <li class="re3">
+            <h2>3</h2>
+            <h3>Resident Evil 3</h3>
+            <br>
+            <p>
+                Secuela de Resident Evil 2, con sucesos paralelos a este título.
+                El juego salió en 1999 y tuvo un remake en el 2020 para varias plataformas. 
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil_3:_Nemesis" target="_blank"><button>Más información.</button></a>
+        </li>
+        <li class="recv">
+            <h2>CV</h2>
+            <h3>Resident Evil</h3>
+            <h3>Code: Veronica</h3>
+            <br>
+            <p>
+                Continua con los sucesos de Resident Evil 2 y 3, unos meses después de dichos títulos.
+                Salió en el 2000 para la Dreamcast, con una posterior salida para la PS2 y GameCube en el 2001 y 2003 (respectivamente). 
+                Si bien el título no es numérico, de todas formas tiene un gran peso en la saga.
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil_CODE:_Veronica" target="_blank"><button>Más información.</button></a>
+        </li>
+    </ul>
+    <ul class="tilesWrap">
+        <li class="re4">
+            <h2>4</h2>
+            <h3>Resident Evil 4</h3>
+            <br>
+            <p>
+                La historia toma lugar 6 años después de los 5 juegos anteriores.
+                Salió en el 2005 para PS2 y GameCube, y desde entonces ha tenido numerosas salidas en muchas plataformas (con un remake en camino para el 2023).
+                Es el primer juego de la saga en tratar de combinar acción dentro de la fórmula del survival horror fundada en el primer Resident Evil.
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil_4" target="_blank"><button>Más información.</button></a>
+        </li>
+        <li class="re5">
+            <h2>5</h2>
+            <h3>Resident Evil 5</h3>
+            <br>
+            <p>
+                Ocurre 5 años después de Resident Evil 4 y es el final del arco de Albert Wesker (el villano principal hasta este título).
+                Salió en 2009 para múltiples plataformas. Este juego sigue con la tendencia del anterior título con respecto a la acción, incluso estando mucho más presente (el survival horror se ve mucho más opacado).
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil_5" target="_blank"><button>Más información.</button></a>
+        </li>
+        <li class="re6">
+            <h2>6</h2>
+            <h3>Resident Evil 6</h3>
+            <br>
+            <p>
+                3 años después de los acontecimientos de Resident Evil 5, la saga ofrece por primera vez 3 campañas jugables (con una cuarta que añadieron más adelante).
+                Salió en el 2012 para múltiples plataformas, y (al igual que el 4 y el 5) la acción sigue presente en la saga, esta vez con mayor enfásis, quedando el survival horror prácticamente inexistente.
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil_6" target="_blank"><button>Más información.</button></a>
+        </li>
+        <li class="re7">
+            <h2>7</h2>
+            <h3>Resident Evil 7</h3>
+            <br>
+            <p>
+                Ocurre 4 años después de Resident Evil 6, y esta vez la saga ofrece una experiencia en primera persona (los anteriores títulos tenían una perspectiva en tercera persona).
+                Salió en 2017 para múltiples plataformas, y en este caso se vuelve a las raíces de survival horror, haciendo especial énfasis en el terror.
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil_7:_Biohazard" target="_blank"><button>Más información.</button></a>
+        </li>
+        <li class="re8">
+            <h2>8</h2>
+            <h3>Resident Evil 8</h3>
+            <br>
+            <p>
+                Ocurre 4 años después de Resident Evil 7, continuando con el mismo protagonista de dicha entrega y también continuando con la perspectiva en primera persona.
+                Salió en 2021 para múltiples plataformas, y el énfasis en el survival horror (retomado en el juego anterior) sigue en esta entrega.
+            </p>
+            <a href="https://residentevil.fandom.com/es/wiki/Resident_Evil:_Village" target="_blank"><button>Más información.</button></a>
+        </li>
+    </ul>
     <!-- main end -->
     
     <!-- footer -->
