creacion de orden.html
se vinculo en el header de cada pagina

--- a/pages/about.html
+++ b/pages/about.html
@@ -40,16 +40,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/pages/info.html">Información</a>
                   </li>
-                  <!-- RECOMENDACIONES(DROP) -->
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Recomendaciones
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="">Dónde jugar?</a></li>
-                      <li><a class="dropdown-item" href="">Orden de jugada cronológica</a></li>
-                      <li><a class="dropdown-item" href="">Orden de jugada por fecha de salida</a></li>
-                    </ul>
+                  <!-- ORDEN DE JUGADA -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="/pages/orden.html">Orden de jugada</a>
                   </li>
                 </ul>
                 <a href="index.html">
@@ -73,19 +66,17 @@
                 <h1 class="text-center">Acerca del sitio...</h1> 
                 <br>
                 <li>
-                    La información de los juegos más importantes de la franquicia (plataformas donde se puede jugar y un breve resumen de la premisa).
-                    Haga click en alguno de los siguientes juegos para saber más sobre el mismo:
+                    Breve resumen de los juegos más importantes de la franquicia. En cada descripción encontrarán un botón que los llevará a la wiki de cada juego para saber más del mismo.
+                    Haga click en el siguiente vínculo para mas información:
                     <ul class="titulos">
                       <br>
                       <a href="/pages/info.html">INFORMACIÓN</a>
                     </ul>
                 </li>
                 <li>Recomendaciones sobre qué orden de jugada optar (por cuál juego empezar por ejemplo) además de la plataforma donde te conviene jugarlo.
-                    Haga click en alguno de los siguientes enlaces para ver alguno de estos órdenes:
+                    Haga click en el siguiente vínculo para mas información:
                     <ul class="ordenes">
-                        <a href=""><li>Dónde jugar?</li></a>
-                        <a href=""><li>Orden de jugada cronológica</li></a>
-                        <a href=""><li>Orden de jugada por fecha de salida</li></a>
+                        <a href="/pages/orden.html"><li>Cómo empezar a jugar la saga?</li></a>
                     </ul>
                 </li>
                 <li>También hay un apartado para contactarme, en caso de que tengas alguna opinión del sitio o cualquier cosa por el estilo.
