--- a/pages/info.html
+++ b/pages/info.html
@@ -40,16 +40,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" href="/pages/info.html">Información</a>
                   </li>
-                  <!-- RECOMENDACIONES(DROP) -->
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Recomendaciones
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="">Dónde jugar?</a></li>
-                      <li><a class="dropdown-item" href="">Orden de jugada cronológica</a></li>
-                      <li><a class="dropdown-item" href="">Orden de jugada por fecha de salida</a></li>
-                    </ul>
+                  <!-- ORDEN DE JUGADA -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="/pages/orden.html">Orden de jugada</a>
                   </li>
                 </ul>
                 <a href="index.html">
