descripcion del seo de orden.html

--- a/pages/orden.html
+++ b/pages/orden.html
@@ -58,7 +58,9 @@
     <!-- header navbar end -->
 
     <!-- main -->
-
+    <main>
+        <h1>Cómo y dónde jugar cada juego...</h1>
+    </main>
     <!-- main end -->
     
     <!-- footer -->
