orden.html finalizado

--- a/pages/orden.html
+++ b/pages/orden.html
@@ -58,8 +58,109 @@
     <!-- header navbar end -->
 
     <!-- main -->
-    <main>
-        <h1>Cómo y dónde jugar cada juego...</h1>
+    <main class="mainorden">
+        <h1 class="tituloOrden">Cómo y dónde jugar cada juego...</h1>
+        <p class="parrafoOrden">A la hora de jugar <strong>Resident Evil</strong> yo considero que uno debe elegir el que más el llame la atención, ya que <strong>la trama de la saga no es su punto fuerte</strong> (si van a optar por esto <strong>eviten</strong> el Resident Evil 0, Code Veronica, 5 y 6 que personalmente creo que <strong>no son buenos puntos de partida</strong>). De todas maneras, a la hora de encarar una franquicia con varios títulos lo que casi siempre hago es <strong>seguir su orden de salida</strong>, para mi es la mejor forma de disfrutar casi cualquier cosa. A continuación podrán ver el <strong>año de salida</strong> de cada título (a la izquierda) y <strong>dónde jugarlo</strong> (a la derecha).</p>
+        <div id="timeline-content">
+            <ul class="timeline">
+              <li class="event" data-date="1996">
+                <h3>Resident Evil 1</h3>
+                <p>
+                    Originalmente el juego salió en PS1 (en 1996), PC (en 1996) y Sega Saturn (en 1997).
+                    <br><br>
+                    La forma más accesible de jugarlo es optando por la <strong>remasterización del remake de GameCube (cabe aclarar que el remake salió en el 2002 pero esta remasterización salió en el 2015)</strong>, el cual está disponible para <strong>PC, PS3, PS4, SWITCH, XBOX 360 Y XBOX ONE.</strong>
+                    <br><br>
+                    De todas formas, si prefieren jugar la <strong>versión original</strong> siempre pueden elegir la <strong>versión digital del juego de PS1 para la PS4 o PS5, o bien la emulación de PS1 en la PC</strong>, aunque creo que una mejor opción sería el <strong>mod Classic REbirth</strong>, que se encargó de mejorar la versión de PC que salió de este juego en el año 1997.
+                    <br><br>
+                    Por otra parte, si poseen una <strong>Nintendo DS</strong> (o consola posterior como la 3DS) también recomiendo jugar a la versión <strong>Deadly Silence</strong> del título, es muy fiel al juego original y además trae varias mejoras.
+                </p>
+              </li>
+              <li class="event" data-date="1998">
+                <h3>Resident Evil 2</h3>
+                <p>
+                    Originalmente el juego salió en PS1 (en 1998), PC (en 1999), Nintendo 64 (en 1999), Dreamcast (en 1999) y en GameCube (en 2003).
+                    <br><br>
+                    La forma más accesible de jugarlo es optando por la <strong>el remake</strong> del 2020, el cual está disponible para <strong>PC, PS4, PS5, XBOX ONE Y XBOX SERIES X|S.</strong>
+                    <br><br>
+                    De todas formas, si prefieren jugar la <strong>versión original</strong> siempre pueden elegir la <strong>emulación de PS1 o GameCube en la PC</strong>, aunque creo que una mejor opción sería el <strong>mod Classic REbirth</strong>, que se encargó de mejorar la versión de PC que salió de este juego en el año 1999.
+                    <br><br>
+                    Por otra parte, también considero una buena opción el <strong>Seamless HD Project</strong>, el cual es una versión mejorada para la emulación de la versión de GameCube.  
+                </p>    
+              </li>
+              <li class="event" id="date" data-date="1999">
+                <h3>Resident Evil 3</h3>
+                <p>
+                    Originalmente el juego salió en PS1 (en 1999), PC (en el 2000), Dreamcast (en el 2000) y en GameCube (en 2003).
+                    <br><br>
+                    La forma más accesible de jugarlo es optando por la <strong>el remake</strong> del 2021, el cual está disponible para <strong>PC, PS4, PS5, XBOX ONE Y XBOX SERIES X|S.</strong>
+                    <br><br>
+                    De todas formas, si prefieren jugar la <strong>versión original</strong> siempre pueden elegir la <strong>emulación de PS1 o GameCube en la PC</strong>, aunque creo que una mejor opción sería el <strong>mod Classic REbirth</strong>, que se encargó de mejorar la versión de PC que salió de este juego en el año 2000.
+                    <br><br>
+                    Por otra parte, también considero una buena opción el <strong>Seamless HD Project</strong>, el cual es una versión mejorada para la emulación de la versión de GameCube.  
+                </p>   
+              </li>
+              <li class="event" id="date" data-date="2000">
+                <h3>Resident Evil CODE: Veronica</h3>
+                <p>
+                    El juego salió en un principio para Dreamcast (en el 2000), PS2 (en 2001) y GameCube (en 2003).
+                    <br><br>
+                    La forma más accesible de jugarlo es mediante la <strong>versión digital del Code Veronica X</strong> (una versión mejorada del título que había salido originalmente para la PS2 y GameCube) para la <strong>PS3, PS4, XBOX 360 y XBOX ONE</strong>.
+                    <br><br>
+                    Otra manera de jugarlo en PC es mediante la <strong>emulación de Dreamcast (si se quiere jugar a la versión original) o GameCube (si se quiere jugar al Code Veronica X)</strong>. También se puede emular la de PS2 pero es más recomendable hacer lo anterior.  
+                </p>  
+              </li>
+              <li class="event" id="date" data-date="2002">
+                <h3>Resident Evil 0</h3>
+                <p>
+                    El juego salió en un principio para GameCube (en 2002).
+                    <br><br>
+                    Más adelante en el 2016 le sacaron una <strong>remasterización</strong>, la cual al día de la fecha es la versión más accesible del juego, y se puede conseguir en <strong>PC, PS3, PS4, SWITCH, XBOX 360 y XBOX ONE</strong>.
+                </p>  
+              </li>
+              <li class="event" id="date" data-date="2005">
+                <h3>Resident Evil 4</h3>
+                <p>
+                    El juego salió en un principio para PS2 (en 2005), GameCube (en 2005) y Wii (en 2007).
+                    <br><br>
+                    Este Resident Evil es uno de los que más versiones tuvo (incluso tendrá un remake que saldrá en el 2023 para <strong>PC, PS5 y XBOX SERES X|S</strong>). Las versiones más accesibles al día de la fecha son la de <strong>PC, PS3, PS4, SWITCH, XBOX 360 y XBOX ONE</strong>
+                    <br><br>
+                    Si se opta por jugarlo en PC, hoy en día existe un parche creado por un fan que "remasteriza" el juego en HD, el nombre del mismo es <strong>Resident Evil 4 HD Project</strong>.  
+                </p>  
+              </li>
+              <li class="event" id="date" data-date="2009">
+                <h3>Resident Evil 5</h3>
+                <p>
+                    El juego salió en un principio para PC, PS3 y XBOX 360 (todos salieron en el 2009).
+                    <br><br>
+                    Lo más accesible al día de la fecha es jugarlo en PC, o bien con versiones posteriores que sacaron del juego para la <strong>Switch, PS4 y  XBOX ONE</strong>.
+                </p>  
+              </li>
+              <li class="event" id="date" data-date="2012">
+                <h3>Resident Evil 6</h3>
+                <p>
+                    El juego salió en un principio para PS3 (en 2012), XBOX 360 (en 2012) y PC (en 2013).
+                    <br><br>
+                    Lo más accesible al día de la fecha es jugarlo en <strong>PC</strong>, o bien con versiones posteriores que sacaron del juego para la <strong>Switch, PS4 y  XBOX ONE</strong>.
+                </p>  
+              </li>
+              <li class="event" id="date" data-date="2017">
+                <h3>Resident Evil 7</h3>
+                <p>
+                    El juego salió en un principio para <strong>PS4, PC y XBOX ONE</strong> (todos en el 2017).
+                    <br><br>
+                    Lo más accesible al día de la fecha es jugarlo con las versiones ya mencionadas, o bien con versiones posteriores que sacaron del juego para la <strong>PS5 y XBOX SERIES X|S</strong>.
+                    <br><br>
+                    También existe una versión de Switch, pero no la recomiendo ya que se debe jugar mediante la nube, asi que en lo posible opten por las opciones anteriores.
+                </p>  
+              </li>
+              <li class="event" id="date" data-date="2017">
+                <h3>Resident Evil: Village</h3>
+                <p>
+                    La octava entrega de la franquicia salió en el 2021 para <strong>PC, PS4, PS5, XBOX ONE y XBOX SERIES X|S</strong>. Cualquiera de esas versiones está más que bien para disfrutar del juego.
+                </p>  
+              </li>
+            </ul>
+        </div>
     </main>
     <!-- main end -->
     
